* PayPal Express integration: Fix received_at time zone [ntalbott]
* NAB Transact: Add refund capability [nagash]
* Stripe: Add support for application_fee [duff]
* SagePay: Add support for GiftAidPayment [duff]
* Wirecard: Add support for partial captures [richardblair]
* Add Pin gateway [madpilot]
* Balanced: Added support for on_behalf_of_uri to capture [cwise]

== Version 1.29.3 (December 7, 2012)

* Braintree Blue: Better wiredump_device support [ntalbott]
* Braintree: Store sets vault id as authorization [ntalbott]
* WorldPay: Fix currencies without fractions like JPY and HUF by rounding down amount [Soleone]

== Version 1.29.2 (December 7, 2012)

* Moneris: fix issue with the default options not being merged [jduff]
* Sage Pay: Make 0000 default post code for everyone if missing [BlakeMesdag]

== Version 1.29.1 (December 5, 2012)

* Add eWay Rapid 3.0 gateway [ntalbott]
* Fix AVS responses missing attributes [jduff]

== Version 1.29.0 (November 30, 2012)

* Authorize.Net gateway: Support description and order_id for capture [ntalbott]
* Add Mercury gateway [adr1anx, opendining]
* Webmoney integration: Add gross, item_id, and amount accessors to notification [fr33z3]
* Fix running tests under ActiveSupport 2.3.14 [ntalbott]
* SagePay Form integration: Remove dependency on ActiveSupport's String#truncate [ntalbott]
* Elavon gateway: Add support for the sales tax parameter [stevestmartin]
* Add WebPay gateway [keikubo]
* iTransact gateway: make void API consistent [frobcode]
* Stripe gateway: Pass city in add_address [npverni]
* Paypal gateway: Add option to change the outstanding balance of a recurring billing profile [mattwhite]
* Mercury gateway: Fix authorizations API [ntalbott]
* Mercury gateway: Support refund properly [ntalbott]
* Braintree Blue gateway: Add support for the recurring flag [ntalbott]
* Add HDFC gateway [ntalbott]
* HDFC gateway: Add more supported currencies [ntalbott]
* HDFC gateway: Add support for passing ECI value [ntalbott]