@@ -29,6 +29,7 @@
 * Wirecard: Add support for partial captures [richardblair]
 * Add Pin gateway [madpilot]
 * Balanced: Added support for on_behalf_of_uri to capture [cwise]
+* Litle: Add support for passing an order_source [forest]
 
 == Version 1.29.3 (December 7, 2012)
 
